viet unittest